--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,71 @@
-<button class="btn btn-primary">Hello</button>
+<div class="container">
+  <div class="row main-row mt-5">
+    <div class="col-lg-6 img-container">
+      <img
+        src="https://images.unsplash.com/photo-1579341560277-4dfaddaf6e98?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80"
+        alt="interior"
+        class="img-fluid"
+      />
+    </div>
+    <div class="col-lg-6 px-5">
+      <form>
+        <h2 id="consult" class="mt-5 mb-4">Request a Free Consultation</h2>
+        <div class="form-row pt-5">
+          <div class="form-group col-lg-12 pb-5">
+            <label for="inputname">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="inputname"
+              autocomplete="username"
+            />
+          </div>
+
+          <div class="form-group col-lg-12 pb-5">
+            <label for="inputEmail">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="inputEmail"
+              autocomplete="username"
+            />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-lg-12 pb-5">
+            <label for="inputState">Time</label>
+            <select id="inputStateTime" class="form-control">
+              <option selected>Choose...</option>
+              <option>8am</option>
+              <option>11am</option>
+              <option>1pm</option>
+              <option>3pm</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            name="flexRadioDefault"
+            id="flexRadioDefault1"
+          />
+          <label class="form-check-label" for="flexRadioDefault1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            soluta quia, beatae ea voluptas excepturi repudiandae!
+            Necessitatibus nostrum maiores repellendus voluptatum eveniet, in
+            deserunt corporis libero, vitae neque nam illo?
+          </label>
+        </div>
+
+        <a rel="noopener noreferrer">
+          <button type="button" class="btn mt-5 btn-primary btn-lg btn-block">
+            Book Free Consultation
+          </button></a
+        >
+      </form>
+    </div>
+  </div>
+</div>
