(FEAT):Finished styling and layout, next is wiring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,11 +60,10 @@
           </label>
         </div>
 
-        <a rel="noopener noreferrer">
-          <button type="button" class="btn mt-5 btn-primary btn-lg btn-block">
+        
+          <button type="button" class="btn my-5 btn-primary btn-lg btn-block">
             Book Free Consultation
-          </button></a
-        >
+          </button>
       </form>
     </div>
   </div>
