(FEAT):The button is working properly noew

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,27 +8,45 @@
       />
     </div>
     <div class="col-lg-6 px-5">
-      <form>
+      <form (ngSubmit)="onSubmit(userData)" #form="ngForm">
         <h2 id="consult" class="mt-5 mb-4">Request a Free Consultation</h2>
-        <div class="form-row pt-5">
+        <div
+          class="form-row pt-5"
+          id="user-data"
+          ngModelGroup="userData"
+          #userData="ngModelGroup"
+        >
           <div class="form-group col-lg-12 pb-5">
             <label for="inputname">Name</label>
             <input
               type="text"
+              name="username"
               class="form-control"
               id="inputname"
-              autocomplete="username"
+              ngModel
+              #username="ngModel"
+              required
             />
+            <span class="help-block" *ngIf="!username.valid && username.touched"
+              >Please enter a valid username</span
+            >
           </div>
 
           <div class="form-group col-lg-12 pb-5">
             <label for="inputEmail">Email</label>
             <input
               type="email"
-              class="form-control"
               id="inputEmail"
-              autocomplete="username"
+              class="form-control"
+              ngModel
+              name="email"
+              required
+              email
+              #email="ngModel"
             />
+            <span class="help-block" *ngIf="!email.valid && email.touched"
+              >Please enter a valid email</span
+            >
           </div>
         </div>
 
@@ -60,10 +78,13 @@
           </label>
         </div>
 
-        
-          <button type="button" class="btn my-5 btn-primary btn-lg btn-block">
-            Book Free Consultation
-          </button>
+        <button
+          type="submit"
+          [disabled]="!userData.valid && userData.touched"
+          class="btn my-5 btn-primary btn-lg btn-block"
+        >
+          Book Free Consultation
+        </button>
       </form>
     </div>
   </div>
