(FEAT):Added the functionality ot disable on invalid answer and touch

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
 
 img {
   box-sizing: border-box;
-  object-fit: cover;
-  width: 100%;
+  object-fit: contain;
+  width:fit-content ;
   height: 100%;
 }
