--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
       />
     </div>
     <div class="col-lg-6 px-5">
-      <form (ngSubmit)="onSubmit(userData)" #form="ngForm">
+      <form (ngSubmit)="onSubmit(username)" #form="ngForm">
         <h2 id="consult" class="mt-5 mb-4">Request a Free Consultation</h2>
         <div
           class="form-row pt-5"
@@ -50,17 +50,33 @@
           </div>
         </div>
 
-        <div class="form-row">
+        <!-- <div class="form-row">
           <div class="form-group col-lg-12 pb-5">
             <label for="inputState">Time</label>
-            <select id="inputStateTime" class="form-control">
-              <option selected>Choose...</option>
-              <option>8am</option>
-              <option>11am</option>
-              <option>1pm</option>
-              <option>3pm</option>
+            <select
+              id="inputStateTime"
+              class="form-control"
+              [ngModel]="defaultQuestion"
+            >
+              <option value="nothing" selected>Choose...</option>
+              <option value="8am">8am</option>
+              <option value="11am">11am</option>
+              <option value="1pm">1pm</option>
+              <option value="3pm">3pm</option>
             </select>
           </div>
+        </div> -->
+        <div class="form-group">
+          <label for="secret">Secret Questions</label>
+          <select
+            id="secret"
+            class="form-control"
+            [ngModel]="defaultQuestion"
+            name="secret"
+          >
+            <option value="pet">Your first Pet?</option>
+            <option value="teacher">Your first teacher?</option>
+          </select>
         </div>
 
         <div class="form-check">
