--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,9 +7,8 @@
 }
 
 img {
-  box-sizing: border-box;
-  object-fit: contain;
-  width:fit-content ;
+  object-fit: fill;
+  width:100% ;
   height: 100%;
 }
 
