(FEAT):Added routes for the new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -112,3 +112,4 @@
   <p>Your Email is {{ user.mail }}</p>
   <p>Your Secret Question is {{ user.secretQuestion }}</p>
 </div>
+<router-outlet></router-outlet>
