(FEAT):Displayed the details in the appointment component

--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -1,1 +1,5 @@
-<p>appointment works!</p>
+<div class="container">
+  <p>Your name is {{ user.userName }}</p>
+  <p>Your Email is {{ user.userMail }}</p>
+  <p>Your Secret Question is {{ user.userQuestion }}</p>
+</div>
