(CONTD):Trying to implement the logic for the radio checked button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,7 +84,7 @@
         <!-- correct the logic for the disabled button -->
         <button
           type="submit"
-          [disabled]="!userData.valid && userData.touched"
+          [disabled]="true"
           class="btn my-5 btn-primary btn-lg btn-block"
         >
           Book Free Consultation
