--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
     <div class="col-lg-6 px-5">
       <form (ngSubmit)="onSubmit()" #form="ngForm">
         <h2 id="consult" class="mt-5 mb-4">Request a Free Consultation</h2>
+        <a routerLink="/">
+          <button class="btn btn-primary">Reset</button>
+        </a>
         <div
           class="form-row pt-5"
           id="user-data"
