(FIX):Changed reset button color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <form (ngSubmit)="onSubmit()" #form="ngForm">
         <h2 id="consult" class="mt-5 mb-4">Request a Free Consultation</h2>
         <a routerLink="/">
-          <button class="btn btn-primary">Reset</button>
+          <button class="btn btn-danger">Reset</button>
         </a>
         <div
           class="form-row pt-5"
