(FEAT):Changed the color of the submit button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,7 @@
             agreement.value == '' ||
             (agreement.value == 'false' && agreement.touched)
           "
-          class="btn my-5 btn-infof btn-lg btn-block"
+          class="btn my-5 btn-warning btn-lg btn-block"
         >
           Book Free Consultation
         </button>
