(FEAT): Changed the border radius and box shadow

--- a/src/app/appointment/appointment.component.scss
+++ b/src/app/appointment/appointment.component.scss
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
-p{
-      margin-bottom: 0px;
+p {
+  margin-bottom: 0px;
 }
 
-.container{
-      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-      width: fit-content;
-      margin-top: 1rem;
-      padding: 2rem;
-      font-size: 1.3rem;
-      font-family: 'Lato', sans-serif;
+.container {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  width: fit-content;
+  margin-top: 1rem;
+  padding: 2rem;
+  font-size: 1.3rem;
+  font-family: "Lato", sans-serif;
 }
