--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@ input.ng-invalid.ng-touched {
   border: 2px solid red;
 }
 
-.userForm{
-  background-color: red;
+.userForm {
+  background: linear-gradient(145deg, #cacaca, #f0f0f0);
+  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 }
-
