--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -113,7 +113,14 @@
               id="inputname"
               formControlName="username"
             />
-            <span class="help-block">Please enter a valid username</span>
+            <span
+              class="help-block"
+              *ngIf="
+                reactiveForm.get('userData.username').valid &&
+                reactiveForm.get('userData.username').touched
+              "
+              >Please enter a valid username</span
+            >
           </div>
 
           <div class="form-group col-lg-12 pb-2">
@@ -125,7 +132,10 @@
               formControlName="email"
               email
             />
-            <span class="help-block">Please enter a valid email</span>
+            <span class="help-block"  *ngIf="
+                reactiveForm.get('userData.email').valid &&
+                reactiveForm.get('userData.email').touched
+              ">Please enter a valid email</span>
           </div>
         </div>
 
@@ -141,7 +151,6 @@
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-
 
         <button type="submit" class="btn my-5 btn-warning btn-lg btn-block">
           Book Free Consultation
