(FEAT): Corrected the error handling messages properly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -116,7 +116,7 @@
             <span
               class="help-block"
               *ngIf="
-                reactiveForm.get('userData.username').valid &&
+                !reactiveForm.get('userData.username').valid &&
                 reactiveForm.get('userData.username').touched
               "
               >Please enter a valid username</span
@@ -132,10 +132,14 @@
               formControlName="email"
               email
             />
-            <span class="help-block"  *ngIf="
+            <span
+              class="help-block"
+              *ngIf="
                 reactiveForm.get('userData.email').valid &&
                 reactiveForm.get('userData.email').touched
-              ">Please enter a valid email</span>
+              "
+              >Please enter a valid email</span
+            >
           </div>
         </div>
 
