(FEAT): I was able to print out the form details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -135,7 +135,7 @@
             <span
               class="help-block"
               *ngIf="
-                reactiveForm.get('userData.email').valid &&
+                !reactiveForm.get('userData.email').valid &&
                 reactiveForm.get('userData.email').touched
               "
               >Please enter a valid email</span
