(FEAT): Created a filter search pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h3>{{text|shorten}}</h3>
+<!-- <h3>{{text|shorten}}</h3> -->
 <router-outlet></router-outlet>
 <div class="container" [ngClass]="{ userForm: sent === true }">
   <div class="row main-row mt-3">
